initial commit - just trying out spark